# libmatic

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONCEPTS.md  COST.md  SETUP.md  SPEC.md  TROUBLESHOOTING.md
examples/: wasm-component-model.md
libmatic/: __init__.py  cli.py  config.py
libmatic/agents/: __init__.py  react.py
libmatic/checkpointer/: __init__.py  sqlite.py
libmatic/nodes/: __init__.py  _helpers.py  pr_review.py  suggest_topics.py  topic_debate.py
libmatic/prompts/: __init__.py  loader.py  philosophy.md
libmatic/prompts/pr_review/: c2_classify_comments.md  c3_address_each.md
libmatic/prompts/suggest_topics/: a3_relevance_filter.md
libmatic/prompts/topic_debate/: README.md  step1_source_collector.md  step4_fact_extractor.md  step5_fact_merger.md  step6_coverage_verifier.md  step7_article_writer.md  step8_expanded_writer.md
libmatic/providers/: __init__.py  cache_control.py  factory.py
libmatic/scaffold/: __init__.py  scaffold.py
libmatic/scaffold/templates/: .env.example  .gitignore.template
libmatic/scaffold/templates/.claude/commands/: address-pr-comments.md  suggest-topics.md  topic-debate.md
libmatic/scaffold/templates/config/: libmatic.yml  source_priorities.yml
libmatic/state/: __init__.py  pr_review.py  suggest_topics.py  topic_debate.py
libmatic/tools/: __init__.py  bash.py  coverage.py  fs.py  github.py  search_sources.py  source.py  web.py  x_fetch.py
libmatic/workflows/: __init__.py  pr_review.py  suggest_topics.py  topic_debate.py
tests/: conftest.py  test_agents_react.py  test_checkpointer_sqlite.py  test_cli.py  test_cli_init.py  test_config.py  test_nodes_pr_review.py  test_nodes_suggest_topics.py  test_nodes_topic_debate.py  test_prompts_loader.py  test_providers.py  test_scaffold.py  test_state.py  test_tools_github.py  test_tools_search_sources.py  test_tools_source.py  test_tools_verify_coverage.py  test_tools_web.py  test_tools_x_fetch.py  test_workflows.py
(+5 files in other folders)
